<resources>
    <string name="app_name">ProntoShop</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_products">Product List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">Product Image</string>
    <string name="no_products_found">No Product Found</string>
    <string name="no_customer_found">No Customer Found</string>
    <string name="delete">Delete</string>
    <string name="no_cart_item_found">No Cart Item Found</string>
    <string name="checkout">Checkout</string>
    <string name="clear">Clear</string>
    <string name="label_subtotal">SubTotal</string>
    <string name="label_total_amount_due">Total  Amount</string>

    <string name="zero">0</string>
    <string name="customer_name">Customer Name</string>
    <string name="qty">qty</string>
    <string name="label_tax">Tax - 8% </string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_description">Description</string>
    <string name="label_price">Sale Price</string>
    <string name="label_add_new_category">Add New Category?</string>
    <string name="label_add_category">Add Category</string>
    <string name="label_purchase_price">Purchase Price</string>
    <string name="hint_product_promo_message">20% Off</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="add_customer">Add Customer</string>
    <string name="hint_customer_name">Customer Name</string>
    <string name="hint_customer_email">Email Address</string>
    <string name="hint_customer_phone">Phone</string>
    <string name="hint_customer_street_address">Street Address 1</string>
    <string name="hint_customer_street_address_2">Street Address 2</string>
    <string name="hint_customer_city">City</string>
    <string name="state">State</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="hint_customer_note">Customer Note</string>
    <string name="edit">Edit</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="google_search">Google Search</string>
    <string name="title_activity_product">Products</string>
    <string name="name_is_required">Name is required</string>
    <string name="price_is_required">Price is required</string>
    <string name="hint_image_path">Image Path</string>
    <string name="select_customer">Select Customer</string>
    <string name="email_is_required">Email is required</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="no_transaction_found">No Transaction found</string>
    <string name="payment_type_cash">Cash</string>
    <string name="payment_type_paypal">PayPal</string>
    <string name="payment_type_card">Card</string>
    <string name="text_view_cash">Cash</string>

</resources>
