<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linear_layout_add_client"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">
        <EditText
            android:id="@+id/edit_text_product_name"
            style="@style/AddProductForm"
            android:hint="@string/hint_product_name"
            android:imeOptions="actionNext" />
        <EditText
            android:id="@+id/edit_text_product_description"
            style="@style/AddProductForm"
            android:hint="@string/hint_product_description"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/edit_text_product_image_path"
            style="@style/AddProductForm"
            android:hint="@string/hint_image_path"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/edit_text_product_promo_message"
            style="@style/AddProductForm"
            android:hint="@string/hint_product_promo_message"
            android:imeOptions="actionNext" />
        <EditText
            android:id="@+id/edit_text_product_sale_price"
            style="@style/AddProductForm"
            android:hint="@string/label_price"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/edit_text_product_purchase_price"
            style="@style/AddProductForm"
            android:hint="@string/label_purchase_price"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext" />

        <AutoCompleteTextView
            android:id="@+id/auto_complete_category"
            style="@style/AddProductForm"
            android:hint="@string/label_add_category"/>

    </LinearLayout>
</ScrollView>